--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>TBCxUsaid Website by Guram Gogichaishvili</title>
   </head>
   <body>
+    <!-- ჰედერი--> 
     <header class="header-wrapper">
       <div class="logo"><img src="img/logo.png" alt="" /></div>
       <nav class="navigation">
@@ -22,7 +23,7 @@
         </ul>
       </nav>
     </header>
-
+<!-- "ჰირო სექცია", ფოტო და ტექსტი ზემოდან--> 
     <div class="hero-section">
       <img src="img/hero.jpg" alt="Hero Image" class="hero-image" />
       <div class="overlay-text">
@@ -30,7 +31,7 @@
         <p>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</p>
       </div>
     </div>
-
+<!-- ტექსტი პროგრამის შესახებ--> 
     <section class="about-text-section">
       <div class="about-text-container">
         <p class="about-text">
@@ -44,12 +45,12 @@
         <div><a class="borderless-btn m-top">გაიგე მეტი</a></div>
       </div>
     </section>
-
+<!-- აქ დინამიურად მოდის კურსების გრიდი--> 
     <section class="card-section">
       <div class="card-title-section"><h2>სასწავლო კურსები</h2></div>
       <div class="card-grid"></div>
     </section>
-
+<!-- აქ ჯავასკრიფტით გენერირდება პარტნიორების ლოგოების საქანელა--> 
     <div class="carousel-outer-section">
       <div class="carousel-title">
         <h3>პროექტის პრატნიორები</h3>
@@ -67,7 +68,7 @@
         </button>
       </div>
     </div>
-
+<!-- აქ გენერირდება ხშირად დასმული კითხვების სია--> 
     <div class="accordion-section">
       <div class="accordion-title-section">
         <h3>ხშირად დასმული კითხვები</h3>
@@ -75,6 +76,8 @@
       </div>
       <div id="accordion-content"></div>
     </div>
+
+    <!--ფუტერი--> 
     <footer>
       <div class="footer-left">
         <div>
